# Image

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake_generator.py  external_setup.py  setup.py
examples/: CMakeLists.txt  primitive.cpp  white_noise.cpp
include/image/: BitmapImage.hpp  Image.h  JpegImage.hpp
include/type/: NormalizedColor.hpp
src/image/: BitmapImage.cpp  Image.cpp  JpegImage.cpp
src/type/: NormalizedColor.cpp
